prepping for deploy

--- a/apps/simple-multi-page/src/app/main/main.component.html
+++ b/apps/simple-multi-page/src/app/main/main.component.html
@@ -9,7 +9,7 @@
       [innerHTML]="randomTxt">
     </div>
 
-    <app-loader class="p-4 mx-3 mb-2 erounded bg-light" *ngIf="!randomTxt"></app-loader>
+    <app-loader class="p-4 mx-3 mb-2 rounded bg-light" *ngIf="!randomTxt"></app-loader>
 
     <div *ngIf="randomTxt" class="p-4 mx-3 mb-2 rounded bg-light app-content"
       [innerHTML]="randomTxt">
