--- a/apps/simple-multi-page/src/app/navbar/navbar.component.html
+++ b/apps/simple-multi-page/src/app/navbar/navbar.component.html
@@ -9,13 +9,13 @@
 
   <div class="collapse navbar-collapse">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
+      <li class="nav-item">
         <a class="nav-link" routerLink="home" routerLinkActive="active">
           Home
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/form">
+        <a class="nav-link" routerLink="/form" routerLinkActive="active">
           Form
         </a>
       </li>
